--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="dish" id="borsc">
             <h2 class="dish_name">Boršč</h2>
             <div class="dish_info">
-                <p class="dish_text">- je tradičná polievka, ktorú nájdete v ruskej a ukrajinskej kuchyni. Jej základ tvorí vývar z kostí a mäsa a zmes osmaženej zeleniny, kde hlavnú úlohu zohráva červená repa. Polievky podobné boršču sa varia aj v ďalších krajinách bývalého Sovietskeho zväzu, Poľsku (barszcz) a Bulharsku.</p>
+                <p class="dish_text">- je tradičná polievka, ktorú nájdete v ukrajinskej kuchyni. Jej základ tvorí vývar z kostí a mäsa a zmes osmaženej zeleniny, kde hlavnú úlohu zohráva červená repa. Polievky podobné boršču sa varia aj v ďalších krajinách bývalého Sovietskeho zväzu, Poľsku (barszcz) a Bulharsku.</p>
                 <img src="./imgs/borsc.jpg" alt="" class="dish_img">
             </div>
             <p class="dish_receptInput">Ak chcete uvarit botsc budete potrebovat:</p>
